# python-dev-test

./: .env.example  .gitignore  0_extract_transform.py  1_pandas_to_sql.py  ClickSignTeste.py  Dockerfile  EDA.ipynb  EDA_clicksign.ipynb  HOW_TO_RUN.md  INSTRUCOES.md  README.md  README2.md  application.py  carregaAdultData.py  carregaAdultTest.py  carrega_dados.py  crontab  data_study.ipynb  docker-compose.yml  environment_variables.py  extract_transform.py  first_method_full_load.py  main.py  makefile  processed_lines.pkl  requirements.txt  second_method_load_base_segmentada.py  tests.py  trigger.py  variables.py
DS/: AdultRandomForest.ipynb
EDA/: AdultData.html  AdultTest.html
ETL/: AdultData.ipynb  AdultTest.ipynb
adult/: README.md  main.py
airflow/: airflow.db-journal  requirements-python3.8.txt
app/: tests.py
census_etl/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
code/: README.md  crontab.txt  etl.py  parametros.json  params.py  setup.sh  start.sh  super-easy.ipynb  us-bureau.ipynb
config/: settings.py  urls.py
dags/: ExportaDados.py  LimpezaDados.py  clicksign_dag.py  dag - solução 1.py  dag - solução 2.py  query.py
data/: AdultData.csv  AdultTest.csv  Description  __init__.py  adult.csv  etl.py  functions.py  send_counter.py  send_data.py
etl-clicksign/: Adult.db  Makefile  README.md  README_DEV.md  pyproject.toml
etl-clicksign/data_exploration/: adult_data.ipynb
etl-clicksign/etl_clicksign/: Adult.db  algorithms.py  dag.py  enumerations.py  migrations.json  models.py
etl-clicksign/tests/: Adult.db  test_models.py
(+121 files in other folders)
