[tool.poetry]
name = "etl-clicksign"
version = "0.1.0"
description = ""
authors = ["Arthur Antunes <arthur.antunes.aa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.4"
peewee = "^3.15.2"
peewee-migrations = "^0.3.32"
apache-airflow = "^2.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
